--- a/templates/play.html
+++ b/templates/play.html
@@ -38,7 +38,7 @@
                 <a href="/" class="btn btn-primary offset-7 mt-3"> Cancel </a>
             </div>
             <div class="col-3">
-                <button class="btn btn-primary offset-2 mt-3" type="submit">Jugar</button>
+                <button class="btn btn-primary offset-2 mt-3" type="submit">Enviar</button>
             </div>
 
         </div>
